Configured mail crendentials to send password reset link

--- a/.env
+++ b/.env
@@ -24,12 +24,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=smtp.mailgun.org
+MAIL_PORT=587
+MAIL_USERNAME=postmaster@sandboxc4ca6f50eb3144d6834b6b6bbda54876.mailgun.org
+MAIL_PASSWORD=5786c90373da3628fe1ea4e3f97e2150-6f4beb0a-85c8e926
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_FROM_ADDRESS=postmaster@sandboxc4ca6f50eb3144d6834b6b6bbda54876.mailgun.org
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
